--- a/apps/frontend/src/styles/setup/_placeholders.scss
+++ b/apps/frontend/src/styles/setup/_placeholders.scss
@@ -49,6 +49,6 @@
   top: 0;
   left: 0;
   background: $white;
-  z-index: 150;
+  z-index: $z-panel;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
